
[metadata]
name = akpycalc
version = 0.0.7
author = ankiz
author_email = ankit48365@gmail.com
description = demo package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ankit48365/akpycalc
project_urls =
    Bug Tracker = https://github.com/ankit48365/akpycalc/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src